# url-decode-simd

./: .editorconfig  Cargo.toml  LICENSE-MIT  readme.md
benches/: benchmark.rs
examples/: build-shuffle-mask.rs
src/: debug.rs  fallback.rs  lib.rs  shuffle_mask.rs  sse41.rs
