[package]
name = "url-decode-simd"
version = "0.1.0"
authors = ["Peter Sutherland <pedrosland+url-decode-simd@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pedrosland/url-decode-simd"

[lib]
bench = false

[features]
debug_simd = [] # Enables debugging information to be printed to the console when using a SIMD implementation.
benchmark = []  # For internal use. Exposes internal functions explicitly for benchmarking.

[dependencies]
memchr = "2.2.1"
aligned = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
